--- a/ZBlogApp.BlazorServer/Components/Pages/Users.razor
+++ b/ZBlogApp.BlazorServer/Components/Pages/Users.razor
@@ -18,7 +18,7 @@
 }
 else
 {
-    <table class="table" style="max-width: 70%;">
+    <table class="table">
         <thead>
             <tr>
                 <th>UserName</th>
