**NOTE**: WebClient Article.razor now use QuickGrid. Not working though. ** Pick the previous submission to use Card style instead. Deleted convert_json_to_docx.py

--- a/ZBlogApp.Web/Components/Pages/ArticleDetail.razor
+++ b/ZBlogApp.Web/Components/Pages/ArticleDetail.razor
@@ -49,7 +49,7 @@ else
     {
         try
         {
-            article = await apiClient.GetArticleAsync(articleId);
+            article = await apiClient.GetArticleWithIdAsync(articleId);
         }
         catch (Exception ex)
         {
