Added article card style razor page along with QuickGrid one. QuickGrid still doen't work

--- a/ZBlogApp.Web/Components/Pages/Articles.razor
+++ b/ZBlogApp.Web/Components/Pages/Articles.razor
@@ -1,4 +1,4 @@
-﻿@page "/articles"
+﻿@page "/articlesqgrid"
 @using Microsoft.EntityFrameworkCore
 @using ZBlogApp.Library
 @inject ArticleApiClient ApiClient
